tests/errors/thread_safety/test_tc_ts_01_shared_mut_no_using.pc
#import std.console;
#import std.mutex;

shared mut long counter = 0
mut mutex.mutex m = 0

int main() {
    counter = 1;
    return 0;
}
